--- a/JS3-Week1-HomeWork/style.css
+++ b/JS3-Week1-HomeWork/style.css
@@ -73,7 +73,7 @@ div.tabbar {
     
 }
 
-.repolinks li, .commitList li {
+.repolinks li, .commitList li, .name_and_commits li {
   line-height: 2em;
   font-size: 1em;
   font-family: Arial, Helvetica, sans-serif;
@@ -157,6 +157,10 @@ div.name p, div.image img, div.date-commit p {
 .tablinks {
     padding: 10px;
 
+}
+.btn_MostCommits {
+    padding: 5px;
+    margin-left: 20px;
 }
 
 
