--- a/JS3-Week2-HomeWork/style.css
+++ b/JS3-Week2-HomeWork/style.css
@@ -27,6 +27,10 @@ input[type=text] {
   
 }
 
+input[type=radio] {
+    padding: 5px;
+}
+
 /* Style the submit button */
 .tosubmit {
   
@@ -74,6 +78,10 @@ div.tabbar {
   font-size: 1em;
   font-family: Arial, Helvetica, sans-serif;
   color: #337ab7;
+}
+.radio-buttons {
+    float: right;
+    margin: 0;
 }
 
 
