--- a/JS3-Week2-HomeWork/style.css
+++ b/JS3-Week2-HomeWork/style.css
@@ -27,6 +27,7 @@ input[type=text] {
   
 }
 
+
 input[type=radio] {
     padding: 5px;
 }
@@ -47,11 +48,13 @@ input[type=radio] {
   clear: both;
   
 }
+
 div.tabbar {
     
   display: flex;
   flex-direction: row-reverse;
-  justify-content: space-between; 
+  justify-content: space-between;
+  
 
   background: skyblue;
   
@@ -71,17 +74,18 @@ div.tabbar {
   margin: 0;
   color: red;
 }
-
-
-.repolinks li {
-  line-height: 2em;
-  font-size: 1em;
-  font-family: Arial, Helvetica, sans-serif;
-  color: #337ab7;
+.All-lists {
+  display: flex;
+  flex-direction: row;
 }
+
+
 .radio-buttons {
     float: right;
     margin: 0;
+}
+.custom-select, .search {
+  float: right;
 }
 
 
